       used by the MiniMC framework. These issues all concerned features not
       actually used by the MiniMC in past releases (fixes github issue #300).
     * Minor bugfix in histogram objects returned by the MiniMC framework. The
       integrate(..) method of these objects now supports integration to include
       the last bin.
     * Add small unscientific but completely reproducible RNG for Python unit
       tests.
     * Add comprehensive (>99% coverage) unit test for python histograms.
     * NCRandUtils.hh: Add randPointInUnitCircle utility.
     * Add testing utilities for easy monitoring that MiniMC output for a
       particular cfg-string does not change in a statistically significant
       manner. This includes utilities for easy inspection and maintenance of
       the tests in case of detected discrepancies. Also add a few new tests
       using this new feature.
     * Add ChiSquared-CDF approximation functions, needed for histogram
       comparisons to yield approximate p-values without introducing a new
       dependency like scipy.
     * Fix flawed asserts preventing proper MiniMC usage in debug builds.
     * MiniMC sources can now actually alter the weights of initial particles,
       and will keep track of the summed weights generated.
     * Add utility function fmtUInt64AsNiceDbl for safely formatting integers
       like 1000000 as 1e6, 12000 as 12e3, or falling back to just a plain
       integer value when appropriate.
     * MiniMC simulations now keep track of how many neutrons (and weights) are
       respectively provided by the source and miss the geometry. This on one
       hand allows more robust estimation of fraction of intensity absorption,
       as well as makes it easier to illuminate complicated shapes uniformly,
       while ignoring the parts of the beam missing the geometry.
     * It is now possible to disable absorption during MiniMC simulations, by
       setting absorption=0 in the enginecfg strings.