@@ -36,6 +36,8 @@ v4.2.13 (work-in-progress)
      * Minor bugfix in histogram objects returned by the MiniMC framework. The
        integrate(..) method of these objects now supports integration to include
        the last bin.
+     * Add Binning class to histograms, for convenience and to reduce code
+       duplication.
      * Add small unscientific but completely reproducible RNG for Python unit
        tests.
      * Add comprehensive (>99% coverage) unit test for python histograms.
